changes/3.19/9d9b211fcf441f813a255534786539a1aeae4e14
drivers: staging: lustre: Kconfig: Let LUSTRE_LLITE_LLOOP depend on all !"*_64K*" page

It does not support 64K page, so let it disabled for 64K page under all
architectures. The related error (with allmodconfig under tile):

    CC [M]  drivers/staging/lustre/lustre/llite/lloop.o
  In file included from drivers/staging/lustre/lustre/llite/../include/../../include/linux/libcfs/libcfs.h:160:0,
                   from drivers/staging/lustre/lustre/llite/../include/lustre_lib.h:52,
                   from drivers/staging/lustre/lustre/llite/lloop.c:106:
  drivers/staging/lustre/lustre/llite/lloop.c: In function 'loop_set_fd':
  drivers/staging/lustre/lustre/llite/../include/../../include/linux/libcfs/libcfs_private.h:411:54: error: duplicate case value
   #define CLASSERT(cond) do {switch (42) {case (cond): case 0: break; } } while (0)
                                                        ^
  drivers/staging/lustre/lustre/llite/lloop.c:525:2: note: in expansion of macro 'CLASSERT'
    CLASSERT(PAGE_CACHE_SIZE < (1 << (sizeof(unsigned short) * 8)));
    ^
  drivers/staging/lustre/lustre/llite/../include/../../include/linux/libcfs/libcfs_private.h:411:41: error: previously used here
   #define CLASSERT(cond) do {switch (42) {case (cond): case 0: break; } } while (0)
                                           ^
  drivers/staging/lustre/lustre/llite/lloop.c:525:2: note: in expansion of macro 'CLASSERT'
    CLASSERT(PAGE_CACHE_SIZE < (1 << (sizeof(unsigned short) * 8)));
    ^

Use "find ./ | grep Kconfig | xargs grep --color 64K" to find all 64K
page macros.

Signed-off-by: Chen Gang <gang.chen.5i5j@gmail.com>
Signed-off-by: Greg Kroah-Hartman <gregkh@linuxfoundation.org>

